update: changed the background to dark colors and updated hero section

--- a/index.html
+++ b/index.html
@@ -54,21 +54,10 @@
         <!-- Hero Section -->
         <section class="hero-section" id="hero">
             <div class="hero-content">
-                <div class="hero-badge">Frontend Engineer</div>
                 <h1 class="hero-title">LASITH DISSANAYAKE</h1>
                 <p class="hero-subtitle">
-                    Building Websites to convert Visitors to Customers 
+                    FULLSTACK DEVELOPER | FREELANCE WEB DEVELOPER
                 </p>
-                <div class="hero-cta-group">
-                    <a href="#projects" class="hero-cta primary">
-                        <i class="fas fa-code"></i>
-                        View Projects
-                    </a>
-                    <a href="#contact" class="hero-cta secondary">
-                        <i class="fas fa-envelope"></i>
-                        Contact Me
-                    </a>
-                </div>
             </div>
         </section>
 
@@ -417,6 +406,44 @@
                                 >
                                 <a
                                     href="https://github.com/DissanayakeLYB/chatpdf-clone"
+                                    class="project-link secondary"
+                                    target="_blank"
+                                    >GitHub</a
+                                >
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- ChatPDF Wrapper Project -->
+                    <div class="project-card" data-category="web">
+                        <div class="project-image">
+                            <img
+                                src="Images/project-images/09_CMIPD/HeroSection.png"
+                                alt="CMIPD Project"
+                            />
+                        </div>
+                        <div class="project-body">
+                            <div class="project-content-section">
+                                <h3 class="project-title">CMIPD</h3>
+                                <p class="project-description">
+                                    CMIPD (Center for Materials Innovation and Product Development) is a website to showcase the services provided.
+                                </p>
+                                <div class="project-tags">
+                                    <span class="project-tag">Next.js</span>
+                                    <span class="project-tag">Tailwind CSS</span>
+                                    <span class="project-tag">TypeScript</span>
+                                    <span class="project-tag">Netlify</span>
+                                </div>
+                            </div>
+                            <div class="project-links">
+                                <a
+                                    href="https://cmipd.com/"
+                                    class="project-link primary"
+                                    target="_blank"
+                                    >Visit Site</a
+                                >
+                                <a
+                                    href="https://github.com/PsychDevs/cmipd-connect"
                                     class="project-link secondary"
                                     target="_blank"
                                     >GitHub</a
