--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
         }
         </script>
         <!-- Favicon -->
-        <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+        <link rel="icon" type="image/x-icon" href="./Images/Profile/L.ico" />
+        <link rel="apple-touch-icon" sizes="180x180" href="./Images/Profile/L.ico" />
         <link rel="manifest" href="/manifest.json" />
         
         <!-- DNS Prefetch & Preconnect for Performance -->
@@ -217,8 +217,6 @@
                             src="Images/Profile/Lasith_small.jpg"
                             alt="Lasith Dissanayake - Professional Fullstack Developer portrait, specializing in React and Next.js web development"
                             loading="lazy"
-                            width="400"
-                            height="400"
                             style="
                                 width: 100%;
                                 border-radius: 12px;
