fix: remove the footer with year and copyrights

--- a/index.html
+++ b/index.html
@@ -667,8 +667,7 @@
             <div class="footer-content">
                 <div class="footer-brand">Lasith Dissanayake</div>
                 <p class="footer-description">
-                    Frontend Engineer passionate about creating exceptional
-                    digital experiences.
+                    Frontend Engineer focused Fullstack Engineer
                 </p>
                 <div class="social-links" role="navigation" aria-label="Social media links">
                     <a
@@ -705,12 +704,6 @@
                         title="X (Twitter) Profile"
                         ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" ><path d="M453.2 112L523.8 112L369.6 288.2L551 528L409 528L297.7 382.6L170.5 528L99.8 528L264.7 339.5L90.8 112L236.4 112L336.9 244.9L453.2 112zM428.4 485.8L467.5 485.8L215.1 152L173.1 152L428.4 485.8z"/></svg></i
                     ></a>
-                </div>
-                <div class="footer-bottom">
-                    <p>
-                        &copy; <span id="current-year"></span> Lasith
-                        Dissanayake. All rights reserved.
-                    </p>
                 </div>
             </div>
         </footer>
